--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -11,3 +11,11 @@ marshmallow==3.20.1
 scikit-learn==1.6.1
 numpy==1.26.4
 pandas==2.2.3
+PyPDF2==3.0.1
+joblib==1.4.2
+scipy==1.11.4
+requests==2.31.0
+reportlab==4.0.7
+Flask-Limiter==3.5.0
+Flask-Caching==2.1.0
+redis==5.0.1
